# opencv_cpu_vs_gpu

./: CMakeLists.txt  README.md
include/: main.hpp
src/: main.cpp
